added smrt table

--- a/src/pages/orders/orders.scss
+++ b/src/pages/orders/orders.scss
@@ -10,4 +10,8 @@ page-orders {
         padding: 0;
         box-shadow: 0px 0px 1px;
     }
+    .ion-title{
+        margin: auto;
+        text-align: center;
+    }
 }
