--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,5 @@
+
+<ion-split-pane [when]="splitPane.getSplitPane()">
 <ion-menu persistent="true" [content]="content">
   <ion-header>
     <ion-toolbar>
@@ -25,4 +27,5 @@
 
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" #content main swipeBackEnabled="false"></ion-nav>
+</ion-split-pane>
