--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -70,6 +70,8 @@ $button-ios-text-color:color($colors,secondary);
 .card-content-ios{
   overflow: auto;
 }
+$toast-ios-background: color($colors,secondary);
+$toast-md-background:color($colors,secondary);
 
 
 // App Material Design Variables
