--- a/src/pages/promotions/promotions.scss
+++ b/src/pages/promotions/promotions.scss
@@ -1,3 +1,20 @@
 page-promotions {
+    .disabled{
+        background-color: gray;
+        opacity: 0.5;
+    }
 
+    .add-promotion .card-header{
+        background: color($colors,primary);
+    }
+
+    .show-promotion .card-header{
+        background: color($colors,secondary)
+    }
+
+    .no-promotion{
+        background-color: #e0e0e0;
+    }
+
+    
 }
