update with catalog error msg

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,7 +15,7 @@
     <ion-list>
         <ion-toolbar>
             <ion-avatar item-left>
-              <img src="../assets/imgs/admin.png" class="dashboard-icons">
+              <img src="assets/imgs/admin.png" class="dashboard-icons">
             </ion-avatar>
             <p ion-text text-center color="secondary"><b>{{admin.adminName}}</b></p>
             <p ion-text text-center color="light"><b>{{admin.emailId}}</b></p>
