added calling feature made responsive ui changes

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,7 +26,7 @@
       </button>
     </ion-list>
     <ion-footer>
-      <button ion-button block (click)="logout()">Logout</button>
+      <button ion-button block menuClose (click)="logout()">Logout</button>
     </ion-footer>
   </ion-content>
 
