show nav based on admin role

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,6 +24,14 @@
        <p ion-text text-left color="secondary"><ion-icon name="{{p.icon}}"></ion-icon>&nbsp;
         {{p.title}} </p> 
       </button>
+      <!--HO-->
+      <span *ngIf="admin.rolesMap && admin.rolesMap.HO">
+        <button  menuClose color="{{p.color}}" ion-item *ngFor="let p of HOpages" (click)="openPage(p)">
+          <p ion-text text-left color="secondary"><ion-icon name="{{p.icon}}"></ion-icon>&nbsp;
+           {{p.title}} </p> 
+         </button>
+      </span>
+      
     </ion-list>
     <ion-footer>
       <button ion-button block menuClose (click)="logout()">Logout</button>
