--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,20 +25,20 @@
         {{p.title}} </p> 
       </button>
       <!--HO-->
-      <span *ngIf="admin.rolesMap && admin.rolesMap.HO">
+      <!-- <span *ngIf="admin.rolesMap && admin.rolesMap.HO">
         <button  menuClose color="{{p.color}}" ion-item *ngFor="let p of HOpages" (click)="openPage(p)">
           <p ion-text text-left color="secondary"><ion-icon name="{{p.icon}}"></ion-icon>&nbsp;
            {{p.title}} </p> 
          </button>
-      </span>
+      </span> -->
 
       <!-- Local Shops-->
-      <span *ngIf="admin.rolesMap && admin.rolesMap.LS">
+      <!-- <span *ngIf="admin.rolesMap && admin.rolesMap.LS">
           <button  menuClose color="{{p.color}}" ion-item *ngFor="let p of LSpages" (click)="openPage(p)">
             <p ion-text text-left color="secondary"><ion-icon name="{{p.icon}}"></ion-icon>&nbsp;
              {{p.title}} </p> 
            </button>
-        </span>
+        </span> -->
     </ion-list>
     <ion-footer>
       <button ion-button block menuClose (click)="logout()">Logout</button>
